--- a/tests/xml/CMakeLists.txt
+++ b/tests/xml/CMakeLists.txt
@@ -2,7 +2,7 @@
 add_test(
   rdi2xml
 
-  ${read_visualsonics_digital_rf_BINARY_DIR}/bin/rdi2xml
+  ${RDI_READER_BINARY_DIR}/bin/rdi2xml
   ${RDI_TESTING_FILEPATH}
   rdi2xml_test_output.xml
   )
@@ -10,7 +10,7 @@ add_test(
 add_test(
   rdi2xml_invalid_file
 
-  ${read_visualsonics_digital_rf_BINARY_DIR}/bin/rdi2xml
+  ${RDI_READER_BINARY_DIR}/bin/rdi2xml
   filepath_that_does_not_exist.rdi
   )
 set_tests_properties(
@@ -24,7 +24,7 @@ if(BUILD_RDI2HTML)
   add_test(
     rdi2html
 
-    ${read_visualsonics_digital_rf_BINARY_DIR}/bin/rdi2html
+    ${RDI_READER_BINARY_DIR}/bin/rdi2html
     ${RDI_TESTING_FILEPATH}
     rdi2html_test_output.html
     )
@@ -32,7 +32,7 @@ if(BUILD_RDI2HTML)
   add_test(
     rdi2html_invalid_file
 
-    ${read_visualsonics_digital_rf_BINARY_DIR}/bin/rdi2html
+    ${RDI_READER_BINARY_DIR}/bin/rdi2html
     filepath_that_does_not_exist.rdi
     )
   set_tests_properties(
@@ -43,10 +43,10 @@ if(BUILD_RDI2HTML)
   add_test(
     rdi2html_xalan_comparison
 
-    ${read_visualsonics_digital_rf_SOURCE_DIR}/tests/xml/xalan_comparison
+    ${RDI_READER_SOURCE_DIR}/tests/xml/xalan_comparison
     ${RDI_TESTING_FILEPATH}
-    ${read_visualsonics_digital_rf_SOURCE_DIR}/source/xml/rdi2html.xsl
-    ${read_visualsonics_digital_rf_BINARY_DIR}/bin/rdi2xml
-    ${read_visualsonics_digital_rf_BINARY_DIR}/bin/rdi2html
+    ${RDI_READER_SOURCE_DIR}/source/xml/rdi2html.xsl
+    ${RDI_READER_BINARY_DIR}/bin/rdi2xml
+    ${RDI_READER_BINARY_DIR}/bin/rdi2html
     )
 endif()
