--- a/source/itk/CMakeLists.txt
+++ b/source/itk/CMakeLists.txt
@@ -1,23 +1,23 @@
 
-#set(spirit_parse_source_dir ${read_visualsonics_digital_rf_SOURCE_DIR}/source/common/spirit_parse)
+#set(spirit_parse_source_dir ${RDI_READER_SOURCE_DIR}/source/common/spirit_parse)
 
 #set(base_srcs  ${spirit_parse_source_dir}/rdiParser.cpp
                                     #${spirit_parse_source_dir}/BoostSpiritInputFile.cpp
-                                    #${read_visualsonics_digital_rf_SOURCE_DIR}/source/common/interpolation/Interpolation.cpp
-                                    #${read_visualsonics_digital_rf_SOURCE_DIR}/source/common/interpolation/NearestNeighbor.cpp
-                                    #${read_visualsonics_digital_rf_SOURCE_DIR}/source/common/interpolation/Bilinear.cpp
-                                    #${read_visualsonics_digital_rf_SOURCE_DIR}/source/common/ImageReader.cpp
-                                    #${read_visualsonics_digital_rf_SOURCE_DIR}/source/common/ImageReaderBase.cpp
-                                    #${read_visualsonics_digital_rf_SOURCE_DIR}/source/common/MetadataReaderBase.cpp
-                                    #${read_visualsonics_digital_rf_SOURCE_DIR}/source/common/VisualSonicsTransform.cpp
+                                    #${RDI_READER_SOURCE_DIR}/source/common/interpolation/Interpolation.cpp
+                                    #${RDI_READER_SOURCE_DIR}/source/common/interpolation/NearestNeighbor.cpp
+                                    #${RDI_READER_SOURCE_DIR}/source/common/interpolation/Bilinear.cpp
+                                    #${RDI_READER_SOURCE_DIR}/source/common/ImageReader.cpp
+                                    #${RDI_READER_SOURCE_DIR}/source/common/ImageReaderBase.cpp
+                                    #${RDI_READER_SOURCE_DIR}/source/common/MetadataReaderBase.cpp
+                                    #${RDI_READER_SOURCE_DIR}/source/common/VisualSonicsTransform.cpp
 				    #)
-#include_directories( ${read_visualsonics_digital_rf_SOURCE_DIR}/source )
+#include_directories( ${RDI_READER_SOURCE_DIR}/source )
 
 #add_library( vs_common SHARED ${base_srcs} )
 ##project( PARAMETRIC_US )
 
-include_directories( ${read_visualsonics_digital_rf_SOURCE_DIR}/source )
-include_directories( ${read_visualsonics_digital_rf_SOURCE_DIR}/source/itk )
+include_directories( ${RDI_READER_SOURCE_DIR}/source )
+include_directories( ${RDI_READER_SOURCE_DIR}/source/itk )
 
 find_package( ITK )
 if( ITK_FOUND )
