--- a/tests/common/CMakeLists.txt
+++ b/tests/common/CMakeLists.txt
@@ -1,4 +1,5 @@
-include_directories(${read_visualsonics_digital_rf_SOURCE_DIR}/source/common)
+include_directories(${RDI_READER_SOURCE_DIR}/source/common
+  ${RDI_READER_SOURCE_DIR}/source)
 set(rdiReader_test_sources
   rdiReader.cpp
   formats/rdi.cxx
@@ -7,12 +8,12 @@ set(rdiReader_test_sources
 foreach(f ${rdiReader_test_sources})
   set(rdiReader_test_sources_full_paths
     ${rdiReader_test_sources_full_paths}
-    ${read_visualsonics_digital_rf_SOURCE_DIR}/source/common/${f}
+    ${RDI_READER_SOURCE_DIR}/source/common/${f}
     )
 endforeach(f)
 configure_file(rdiReaderTest.cpp
   rdiReaderTestConfigured.cpp @ONLY)
-set_source_files_properties(${read_visualsonics_digital_rf_BINARY_DIR}/tests/common/rdiReaderTestConfigured.cpp
+set_source_files_properties(${RDI_READER_BINARY_DIR}/tests/common/rdiReaderTestConfigured.cpp
   PROPERTIES GENERATED true)
 add_executable(rdiReaderTest
   rdiReaderTestConfigured.cpp
