USE_ITK cmake config var

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,11 +1,13 @@
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/modules)
-find_package(XercesC REQUIRED)
+set( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/modules )
+find_package( XercesC REQUIRED )
 
-add_subdirectory(common)
-add_subdirectory(xml)
+add_subdirectory( common )
+add_subdirectory( xml )
 
-if(USE_VTK)
+if( USE_VTK )
   add_subdirectory(vtk)
-endif(USE_VTK)
+endif()
 
-add_subdirectory(itk)
+if( USE_ITK )
+  add_subdirectory(itk)
+endif()
