--- a/tests/itk/CMakeLists.txt
+++ b/tests/itk/CMakeLists.txt
@@ -7,12 +7,27 @@ if( BMODE_INCLUDE-NOTFOUND )
 endif()
 include_directories( ${BMODE_INCLUDE} )
 
+include( ${ITK_USE_FILE} )
+
+include_directories( ${RDI_READER_SOURCE_DIR}/source/itk )
+
+set_source_files_properties(
+  vs-convert-b-mode.cxx
+  PROPERTIES COMPILE_FLAGS -DITK_MANUAL_INSTANTIATION
+  )
+
 add_executable( vs-convert-b-mode
   vs-convert-b-mode.cxx
   b-mode-instan.cxx
+  reader-instan.cxx
+  writer-instan.cxx
+  ${RDI_READER_SOURCE_DIR}/source/itk/itkVisualSonicsImageIO.cxx
+  ${RDI_READER_SOURCE_DIR}/source/itk/itkVisualSonicsImageIOFactory.cxx
   )
-set_target_properties( vs-convert-b-mode
-  PROPERTIES COMPILE_FLAGS -DITK_MANUAL_INSTANTIATION
+target_link_libraries( vs-convert-b-mode
+  ITKCommon
+  ITKIO
+  ITKStatistics
   )
 
 
