--- a/tests/itk/CMakeLists.txt
+++ b/tests/itk/CMakeLists.txt
@@ -10,12 +10,12 @@ include_directories( ${BMODE_INCLUDE} )
 include( ${ITK_USE_FILE} )
 
 include_directories( ${RDI_READER_SOURCE_DIR}/source/itk )
+include_directories( ${RDI_READER_SOURCE_DIR}/source/common )
 
 set_source_files_properties(
   vs-convert-b-mode.cxx
   PROPERTIES COMPILE_FLAGS -DITK_MANUAL_INSTANTIATION
   )
-
 add_executable( vs-convert-b-mode
   vs-convert-b-mode.cxx
   b-mode-instan.cxx
@@ -25,6 +25,7 @@ add_executable( vs-convert-b-mode
   ${RDI_READER_SOURCE_DIR}/source/itk/itkVisualSonicsImageIOFactory.cxx
   )
 target_link_libraries( vs-convert-b-mode
+  rdiReader
   ITKCommon
   ITKIO
   ITKStatistics
