--- a/source/common/CMakeLists.txt
+++ b/source/common/CMakeLists.txt
@@ -1,22 +1,12 @@
-#set(spirit_parse_source_dir ${RDI_READER_SOURCE_DIR}/source/common/spirit_parse)
-
-
-
-
-#set(parse_vs_rdi_lib_srcs  ${spirit_parse_source_dir}/rdiParser.cpp
-                                    #${spirit_parse_source_dir}/BoostSpiritInputFile.cpp
-                                    #${RDI_READER_SOURCE_DIR}/source/common/ImageReader.cpp
-                                    #${RDI_READER_SOURCE_DIR}/source/common/ImageReaderBase.cpp
-                                    #${RDI_READER_SOURCE_DIR}/source/common/MetadataReaderBase.cpp
-				    #${RDI_READER_SOURCE_DIR}/source/common/parse_vs_rdi.cpp
-                                    #${RDI_READER_SOURCE_DIR}/source/common/VisualSonicsTransform.cpp
-				    #${RDI_READER_SOURCE_DIR}/source/common/interpolation/Interpolation.cpp
-				    #${RDI_READER_SOURCE_DIR}/source/common/interpolation/NearestNeighbor.cpp
-				    #${RDI_READER_SOURCE_DIR}/source/common/interpolation/Bilinear.cpp
-				    #)
-
-
-#add_library( parse_vs_rdi SHARED ${parse_vs_rdi_lib_srcs} )
+set(RDI_READER_CLASS_SOURCES
+  ${RDI_READER_SOURCE_DIR}/source/common/rdiReader.cpp
+  ${RDI_READER_SOURCE_DIR}/source/common/formats/rdi.cxx
+  ${RDI_READER_SOURCE_DIR}/source/common/ToXMLCh.cpp
+  )
+add_library( rdiReader SHARED ${RDI_READER_CLASS_SOURCES} )
+target_link_libraries( rdiReader
+  ${XERCESC_LIBRARIES}
+  )
 
 if(ANALYZE_RDI_FORMAT)
   add_subdirectory(formats)
