creat itkVisualSonicsSeriesReader test

--- a/tests/itk/CMakeLists.txt
+++ b/tests/itk/CMakeLists.txt
@@ -26,12 +26,30 @@ target_link_libraries( vs-convert-b-mode
   ITKVisualSonicsImageIO
   ITKStatistics
   )
-
-
 add_test( vs-convert-b-mode
   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/vs-convert-b-mode
   ${RDI_TESTING_FILEPATH}
   vs-convert-b-mode_output.mhd
+  )
+
+set_source_files_properties(
+  vs-convert-b-mode-series.cxx
+  PROPERTIES COMPILE_FLAGS -DITK_MANUAL_INSTANTIATION
+  )
+add_executable( vs-convert-b-mode-series
+  vs-convert-b-mode-series.cxx
+  b-mode-instan.cxx
+  reader-instan.cxx
+  writer-instan.cxx
+  )
+target_link_libraries( vs-convert-b-mode-series
+  ITKVisualSonicsImageIO
+  ITKStatistics
+  )
+add_test( vs-convert-b-mode-series
+  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/vs-convert-b-mode-series
+  ${RDI_TESTING_FILEPATH}
+  vs-convert-b-mode-series_output.mhd
   )
 
 add_test( vs-convert
