--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,6 +2,7 @@ set( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/modules 
 find_package( XercesC REQUIRED )
 
 add_subdirectory( common )
+add_subdirectory( modules )
 add_subdirectory( xml )
 
 if( USE_VTK )
