install rdiReader.h, ToXMLCh.h, rdi.hxx, rdi.xsd

--- a/source/common/CMakeLists.txt
+++ b/source/common/CMakeLists.txt
@@ -10,6 +10,16 @@ target_link_libraries( rdiReader
 install( TARGETS rdiReader
   LIBRARY DESTINATION lib
   )
+install( FILES
+  rdiReader.h
+  ToXMLCh.h
+  DESTINATION include/rdiReader
+  )
+install( FILES
+  formats/rdi.hxx
+  formats/rdi.xsd
+  DESTINATION include/rdiReader/formats
+  )
 
 if(ANALYZE_RDI_FORMAT)
   add_subdirectory(formats)
