change test from a plaque to phantom and improve method

--- a/tests/common/CMakeLists.txt
+++ b/tests/common/CMakeLists.txt
@@ -1,16 +1,15 @@
 include_directories( ${RDI_READER_SOURCE_DIR}/source/common )
 
-configure_file(rdiReaderTest.cpp
-  rdiReaderTestConfigured.cpp @ONLY)
-set_source_files_properties(${RDI_READER_BINARY_DIR}/tests/common/rdiReaderTestConfigured.cpp
-  PROPERTIES GENERATED true)
 add_executable(rdiReaderTest
-  rdiReaderTestConfigured.cpp
+  rdiReaderTest.cpp
   )
 target_link_libraries(rdiReaderTest
   rdiReader
   ${XERCESC_LIBRARIES}
-  ${GTEST_BOTH_LIBRARIES}
+  ${GTEST_LIBRARIES}
   )
-GTEST_ADD_TESTS(${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/rdiReaderTest " " rdiReaderTest.cpp)
+add_test(rdiReaderGTest 
+  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/rdiReaderTest 
+  ${RDI_TESTING_FILEPATH}
+  )
 
