Do not USE_VTK by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set(ANALYZE_RDI_FORMAT OFF CACHE BOOL
 set(BUILD_RDI2HTML ON CACHE BOOL
   "Build program that converts rdi files to a human readable html file.")
 
-set( USE_VTK ON CACHE BOOL
+set( USE_VTK OFF CACHE BOOL
   "Build capabilities related to the Visualization Toolkit www.vtk.org" )
 
 set( USE_ITK ON CACHE BOOL
