Workaround Windows issues with DLL's.
apparently a SHARED add_library target gets split up into a RUNTIME and an
ARCHIVE.  We put them both in the lib DESTINATION, although I don't know if it
is appropriate.

--- a/source/common/CMakeLists.txt
+++ b/source/common/CMakeLists.txt
@@ -8,7 +8,7 @@ target_link_libraries( rdiReader
   ${XERCESC_LIBRARIES}
   )
 install( TARGETS rdiReader
-  LIBRARY DESTINATION lib
+  DESTINATION lib
   )
 install( FILES
   rdiReader.h
