Fix rdiReader library issues on Windows?

--- a/source/common/CMakeLists.txt
+++ b/source/common/CMakeLists.txt
@@ -3,7 +3,7 @@ set(RDI_READER_CLASS_SOURCES
   ${RDI_READER_SOURCE_DIR}/source/common/formats/rdi.cxx
   ${RDI_READER_SOURCE_DIR}/source/common/ToXMLCh.cpp
   )
-add_library( rdiReader SHARED ${RDI_READER_CLASS_SOURCES} )
+add_library( rdiReader ${RDI_READER_CLASS_SOURCES} )
 target_link_libraries( rdiReader
   ${XERCESC_LIBRARIES}
   )
