--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ set( CMAKE_RUNTIME_OUTPUT_DIRECTORY
 set( CMAKE_LIBRARY_OUTPUT_DIRECTORY
   ${RDI_READER_BINARY_DIR}/lib )
 
+add_subdirectory( submodules/gdb-pretty-itk-cmake )
 
 add_subdirectory(source)
 
