--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "submodules/gdb-pretty-itk-cmake"]
 	path = submodules/gdb-pretty-itk-cmake
 	url = http://git.gitorious.org/gdb-pretty/gdb-pretty-itk-cmake.git
+[submodule "submodules/itk-fft-extensions"]
+	path = submodules/itk-fft-extensions
+	url = git://gitorious.org/ultrasound-b-mode/itk-fft-extensions.git
